fixed position of profile picture on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,7 @@ top: 2px;
     }
 
     .profile-picture {
-        bottom: 500px;
+        bottom: 530px;
         left: 0px;
     }
 
